[package]
name = "open_tv"
version = "1.6.1"
description = "Fast And Powerful IPTV App"
authors = ["Frédéric Lachapelle"]
license = ""
repository = ""
edition = "2024"
rust-version = "1.85.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "open_tv_lib"
crate-type = ["staticlib", "cdylib", "lib"]

[build-dependencies]
tauri-build = { version = "2.1.0", features = [] }

[dependencies]
serde_json = "1.0.140"
rusqlite = { version = "0.32.1", features = ["bundled"] }
serde = { version = "1.0.219", features = ["derive"] }
tauri = { version = "2.4.0", features = ["tray-icon"] }
anyhow = { version = "1.0.97" }
regex = { version = "1.11.1", features = ["std"] }
directories = "6.0.0"
reqwest = { version = "0.12.15", features = ["json"] }
tokio = { version = "1.44.1", features = ["full"] }
url = "2.5.4"
r2d2_sqlite = "0.25.0"
r2d2 = "0.8.10"
bytes = "1.10.1"
tauri-plugin-dialog = "2.2.0"
chrono = "0.4.40"
which = "7.0.2"
tauri-plugin-clipboard-manager = "2.2.2"
tauri-plugin-shell = "2.2.0"
simplelog = "0.12.2"
log = "0.4.27"
rusqlite_migration = "1.3.1"
base64 = "0.22.1"
tauri-plugin-notification = "2.2.2"
warp = "0.3.7"
if-addrs = "0.13.4"
[target.'cfg(any(target_os = "linux", target_os = "macos"))'.dependencies]
shell-words = "1.1.0"
[target.'cfg(target_os = "windows")'.dependencies]
winsplit = "0.1.0"
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2.2.2"
