[package]
name = "open_tv"
version = "1.8.0"
description = "Fast And Powerful IPTV App"
authors = ["Frédéric Lachapelle"]
license = ""
repository = ""
edition = "2024"
rust-version = "1.85.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "open_tv_lib"
crate-type = ["staticlib", "cdylib", "lib"]

[build-dependencies]
tauri-build = { version = "2.3.0", features = [] }

[dependencies]
serde_json = "1.0.141"
rusqlite = { version = "0.32.1", features = ["bundled"] }
serde = { version = "1.0.219", features = ["derive"] }
tauri = { version = "2.6.2", features = ["tray-icon"] }
anyhow = { version = "1.0.98" }
regex = { version = "1.11.1", features = ["std"] }
directories = "6.0.0"
reqwest = { version = "0.12.22", features = ["json"] }
tokio = { version = "1.46.1", features = ["full"] }
url = "2.5.4"
r2d2_sqlite = "0.25.0"
r2d2 = "0.8.10"
bytes = "1.10.1"
tauri-plugin-dialog = "2.3.0"
chrono = "0.4.41"
which = "7.0.3"
tauri-plugin-clipboard-manager = "2.3.0"
tauri-plugin-shell = "2.3.0"
simplelog = "0.12.2"
log = "0.4.27"
rusqlite_migration = "1.3.1"
base64 = "0.22.1"
tauri-plugin-notification = "2.3.0"
warp = "0.3.7"
if-addrs = "0.13.4"
tokio-util = "0.7.15"
[target.'cfg(any(target_os = "linux", target_os = "macos"))'.dependencies]
shell-words = "1.1.0"
[target.'cfg(target_os = "windows")'.dependencies]
winsplit = "0.1.0"
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2.3.0"
