[package]
name = "open_tv"
version = "2.0.2"
description = "Fast And Powerful IPTV App"
authors = ["Frédéric Lachapelle"]
license = "GPL-2.0"
repository = "https://github.com/Beats-Projects/open-tv"
edition = "2021"
rust-version = "1.91.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "open_tv_lib"
crate-type = ["staticlib", "cdylib", "lib"]

[build-dependencies]
tauri-build = { version = "2.5.2", features = [] }

[dependencies]
serde_json = "1.0.145"
rusqlite = { version = "0.32.1", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
tauri = { version = "2.9.3", features = [] }
anyhow = { version = "1.0.100" }
regex = { version = "1.12.2", features = ["std"] }
directories = "6.0.0"
reqwest = { version = "0.12.24", features = ["json", "stream"] }
tokio = { version = "1.48.0", features = ["full"] }
url = "2.5.7"
r2d2_sqlite = "0.25.0"
r2d2 = "0.8.10"
bytes = "1.11.0"
tauri-plugin-dialog = "2.6.0"
chrono = "0.4.42"
which = "7.0.3"
tauri-plugin-clipboard-manager = "2.3.2"
tauri-plugin-shell = "2.3.4"
simplelog = "0.12.2"
log = "0.4.28"
rusqlite_migration = "1.3.1"
base64 = "0.22.1"
tauri-plugin-notification = "2.3.3"
warp = "0.3.7"
if-addrs = "0.13.4"
tokio-util = "0.7.17"
indexmap = "2.12.1"
futures-util = "0.3.31"
tokio-stream = "0.1.18"
keyring = "3.2.1"
[target.'cfg(any(target_os = "linux", target_os = "macos"))'.dependencies]
shell-words = "1.1.0"
[target.'cfg(target_os = "windows")'.dependencies]
winsplit = "0.1.0"
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2.3.6"
[target.'cfg(any(target_os = "macos", target_os = "windows"))'.dependencies]
tauri = { version = "2.9.3", features = ["tray-icon"] }
